# Win-CodexBar

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.es-MX.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  README.zh-TW.md  appveyor.yml  dev.ps1  dev.sh  version.env
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/installer/: codexbar.iss
rust/scripts/: build-installer.sh
rust/src/: agent_sessions.rs  codex_costs.rs  codex_sessions.rs  cost_scanner.rs  lib.rs  locale.rs  main.rs  notifications.rs  pi_session_cost.rs  secure_file.rs  settings.rs  updater.rs  wsl.rs
rust/src/agent_sessions/: focus.rs  parsers.rs  tests.rs
rust/src/browser/: cookie_cache.rs  cookies.rs  detection.rs  wsl_paths.rs
rust/src/cli/: account.rs  cmdpal.rs  diagnose.rs  guard.rs  hooks.rs  mod.rs  serve.rs  tty_runner.rs  usage.rs
rust/src/core/: adaptive_refresh.rs  cost_pricing.rs  cost_pricing_tests.rs  credential_migration.rs  credentials.rs  hooks.rs  http.rs  http_proxy.rs  jsonl_scanner.rs  mod.rs  models_dev_pricing.rs  process_util.rs  provider.rs  provider_factory.rs  rate_window.rs  redactor.rs  token_accounts.rs  usage_pace.rs  usage_snapshot.rs
rust/src/host/: session.rs
rust/src/locale/: chinese.rs  en-US.ftl  english.rs  es-MX.ftl  ja-JP.ftl  japanese.rs  keys.rs  ko-KR.ftl  korean.rs  spanish.rs  tests.rs  zh-CN.ftl  zh-TW.ftl
rust/src/native_ui/: app.rs  preferences.rs  theme.rs
rust/src/providers/: alibabatokenplan.rs  azureopenai.rs  infini.rs  mod.rs  t3chat.rs  wayfinder.rs
rust/src/providers/abacus/: mod.rs
rust/src/providers/aiand/: mod.rs
rust/src/providers/alibaba/: mod.rs
rust/src/providers/amp/: mod.rs
rust/src/providers/antigravity/: mod.rs
rust/src/providers/bedrock/: mod.rs
rust/src/providers/chutes/: mod.rs
rust/src/providers/claude/: cli_reset.rs  mod.rs  oauth.rs  scoped_weekly.rs  web_api.rs
rust/src/providers/clinepass/: mod.rs
rust/src/providers/codex/: api.rs
rust/src/providers/commandcode/: mod.rs
rust/src/providers/copilot/: api.rs
rust/src/providers/crossmodel/: mod.rs
rust/src/providers/cursor/: api.rs  mod.rs  token_cost.rs
rust/src/providers/deepinfra/: mod.rs
rust/src/providers/doubao/: mod.rs
rust/src/providers/factory/: mod.rs
rust/src/providers/gemini/: api.rs  mod.rs
rust/src/providers/grok/: mod.rs
rust/src/providers/kilo/: mod.rs
rust/src/providers/kimi/: mod.rs
rust/src/providers/kimik2/: mod.rs
rust/src/providers/kiro/: mod.rs  version.rs
rust/src/providers/litellm/: mod.rs
rust/src/providers/longcat/: mod.rs
rust/src/providers/manus/: mod.rs
rust/src/providers/mimo/: mod.rs
rust/src/providers/minimax/: mod.rs
rust/src/providers/mistral/: mod.rs
rust/src/providers/nanogpt/: mod.rs
rust/src/providers/neuralwatt/: mod.rs
rust/src/providers/ollama/: mod.rs
rust/src/providers/openaiapi/: mod.rs
rust/src/providers/opencode/: mod.rs  scraper.rs
rust/src/providers/opencodego/: local.rs  mod.rs
rust/src/providers/qoder/: mod.rs
rust/src/settings/: api_keys.rs  provider_workspace.rs  raw.rs  tests.rs  types.rs
rust/src/status/: mod.rs
rust/src/tray/: manager.rs  weekly_indicator.rs
(+160 files in other folders)
